stabilization and improvements